2007-02-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/obconversion.h: Removed OBConversion:: before
	CheckForUnintendedBatch(...); to fix compilation error.

	* src/forcefield.cpp: Added/Updated LineSearch, SteepestDescent,
	ConjugateGradients. Also added the same functions as Validate... to
	test the implementation for x^2 + 2 y^2.
	Added bool is14(OBAtom *a, OBAtom *b). Should move to atom.cpp??
	Started working on DistanceGeometry (needs more sophisticated matrix
	operations than OB currently supports).

	* src/forcefields/forcefieldghemical.cpp: Now uses
	OBFFXXXCalculationYYY to improve performance. All energy functions have
	analytical derivatives. Small corrections to the energy expressions to
	match energies produced by ghemical, added 14-scaling for non bonded 
	energy terms. Different bondtypes in ghemical.prm are no longer
	ignored. Added ValidateGradients().

	* src/forcefield/forcefieldmmff94.cpp: Continue work on MMFF94 to
	comply with the validation suite.
	Added ValidateGradients().
	
2007-02-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/obmolecformat.cpp: Comment out sections of
	ReadChemObjectImpl -- looks like code from Chris invoking
	OBMol::Separate().

2007-02-13 Chris Morley

	Clear OBMol objects by default at start of ReadMolecule.
	
	* include/openbabel/base.h: Add CastAndClear().
	
	* src/*format.cpp(ReadMolecule): Replace dynamic_cast by a call
	to CastAndClear().
	
	* include/openbabel/obconversion.h, src/obconversion.cpp
	(Read, ReadString, ReadFilemove): Remove clearFirst parameter,
	since it is no longer needed. 
	
2007-02-13 Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Corrected bug 1657817 - wrong name for batch conversion
	of one file - which was due to misinterpretation as 
	splitting operation. Solution requires that the base name
	for output files splitting is not empty - not a big constraint.
	Added extra warning messages and checks in 